# Overworked

./: .env.example  .gitignore  Cargo.toml  README.md  deploy.sh  dfx.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: identified-limit.yml
.github/instructions/: frontend-test.instructions.md  general.instructions.md  typescript.instructions.md
.github/workflows/: e2e.yml
notes/: RUN.md
scripts/: deploy_ledger.sh  dev-container-setup.sh  generate-candid.sh  wheretoken.bash
src/ai-services/: README.md
src/backend/: Cargo.toml
src/backend/competition/: Cargo.toml  competition.did
src/backend/course/: Cargo.toml  course.did
src/backend/grindarena/: Cargo.toml  grindarena.did
src/backend/paginator/: Cargo.toml
src/backend/shared/: Cargo.toml  shared.did
src/backend/src/: lib.rs
src/backend/storage/: Cargo.toml  storage.did
src/backend/towntalk/: Cargo.toml  towntalk.did
src/backend/towntalk/src/: lib.rs
src/backend/user/: Cargo.toml  user.did
src/backend/utilities/: Cargo.toml
src/backend/utilities/src/: lib.rs
src/cry-token/: .bash.env.template  .gitignore  README.md  deploy_ledger.bash  dfx.json  setup.txt  wheretoken.bash
src/frontend/: frontend-test-setup.ts  index.html  main.tsx  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.setup.ts
src/frontend/contexts/: storage-context.tsx  town-talk-context.tsx
src/frontend/hooks/: use-town-talk.tsx
src/frontend/providers/: storage-provider.tsx  town-talk-provider.tsx
tests/src/: backend.test.ts
(+127 files in other folders)
