[package]
name = "towntalk"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
futures = "0.3.31"
ic-cdk = "0.18.5"
ic-cdk-timers = "0.12.2"
ic_principal = "0.1.1"
serde = "1.0.219"
utilities = { path = "../utilities" }
paginator = { path = "../paginator" }
